--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,12 +1,12 @@
-name: Demo Workflow
-on:  workflow_dispatch
-jobs: 
-  print:
+name: Test React App
+on: push
+jobs:
+  test_my_app:
     runs-on: ubuntu-latest
     steps:
-      - name: Print to console
-        run: echo Hello Git Hub Actions!
-      - name: Print a few lines
-        run: |
-          echo First line
-          echo Second line
+      - name: Get the repo code
+        uses: actions/checkout@v3
+      - name: Install Dependencies
+        run: npm ci
+      - name: test application
+        run: npm run test
