--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -2,7 +2,7 @@ name: Print PR Context
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, edit, reopen]
+    types: [opened, edited, reopened]
 jobs:
   print:
     runs-on: ubuntu-latest
