--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{hash('**/package-lock.json')}}
       - name: Install Dependencies
         run: npm ci
       - name: test application
@@ -21,6 +26,11 @@ jobs:
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{hash('**/package-lock.json')}}
       - name: Install Dependencies
         run: npm ci
       - name: Lint application
@@ -31,6 +41,11 @@ jobs:
     steps:
       - name: Get the repo code
         uses: actions/checkout@v3
+      - name: cache deps
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: node-modules-${{hash('**/package-lock.json')}}
       - name: Install Dependencies
         run: npm ci
       - name: Build application
